@@ -31,6 +31,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -1495,6 +1505,15 @@ condition|(
 name|cache
 condition|)
 block|{
+name|boolean
+name|wasResponseNull
+init|=
+operator|(
+name|response
+operator|==
+literal|null
+operator|)
+decl_stmt|;
 name|List
 name|cachedResults
 init|=
@@ -1514,6 +1533,8 @@ condition|(
 name|response
 operator|==
 literal|null
+operator|||
+name|wasResponseNull
 condition|)
 block|{
 name|response
@@ -1583,11 +1604,28 @@ block|{
 name|executePostCache
 argument_list|()
 expr_stmt|;
-return|return
+name|List
+name|result
+init|=
 name|response
 operator|.
 name|firstList
 argument_list|()
+decl_stmt|;
+comment|// make an immutable list to make sure callers don't mess it up
+return|return
+name|result
+operator|!=
+literal|null
+condition|?
+name|Collections
+operator|.
+name|unmodifiableList
+argument_list|(
+name|result
+argument_list|)
+else|:
+literal|null
 return|;
 block|}
 block|}
