@@ -153,6 +153,18 @@ name|junit
 operator|.
 name|Assert
 operator|.
+name|assertEquals
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
 name|assertNotSame
 import|;
 end_import
@@ -278,6 +290,278 @@ literal|0
 argument_list|)
 operator|.
 name|getObjectContext
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+argument_list|(
+name|expected
+operator|=
+name|UnsupportedOperationException
+operator|.
+name|class
+argument_list|)
+specifier|public
+name|void
+name|testLocalCacheStoresAnImmutableList
+parameter_list|()
+block|{
+name|Artist
+name|a
+init|=
+name|context1
+operator|.
+name|newObject
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|a
+operator|.
+name|setArtistName
+argument_list|(
+literal|"artist"
+argument_list|)
+expr_stmt|;
+name|context1
+operator|.
+name|commitChanges
+argument_list|()
+expr_stmt|;
+name|ObjectSelect
+argument_list|<
+name|Artist
+argument_list|>
+name|q
+init|=
+name|ObjectSelect
+operator|.
+name|query
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+operator|.
+name|localCache
+argument_list|()
+decl_stmt|;
+name|List
+argument_list|<
+name|Artist
+argument_list|>
+name|result1
+init|=
+name|context1
+operator|.
+name|performQuery
+argument_list|(
+name|q
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|result1
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Mutate the returned list. This should not change the cache.
+name|result1
+operator|.
+name|add
+argument_list|(
+name|context1
+operator|.
+name|newObject
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|Artist
+argument_list|>
+name|result2
+init|=
+name|context1
+operator|.
+name|performQuery
+argument_list|(
+name|q
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"the list stored in the local query cache cannot be mutated after being returned"
+argument_list|,
+literal|1
+argument_list|,
+name|result2
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|result2
+operator|.
+name|add
+argument_list|(
+name|context1
+operator|.
+name|newObject
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|Artist
+argument_list|>
+name|result3
+init|=
+name|context1
+operator|.
+name|performQuery
+argument_list|(
+name|q
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"the list stored in the local query cache cannot be mutated after being returned"
+argument_list|,
+literal|1
+argument_list|,
+name|result3
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testSharedCacheStoresAnImmutableList
+parameter_list|()
+block|{
+name|Artist
+name|a
+init|=
+name|context1
+operator|.
+name|newObject
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|a
+operator|.
+name|setArtistName
+argument_list|(
+literal|"artist"
+argument_list|)
+expr_stmt|;
+name|context1
+operator|.
+name|commitChanges
+argument_list|()
+expr_stmt|;
+name|ObjectSelect
+argument_list|<
+name|Artist
+argument_list|>
+name|q
+init|=
+name|ObjectSelect
+operator|.
+name|query
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+operator|.
+name|sharedCache
+argument_list|()
+decl_stmt|;
+name|List
+argument_list|<
+name|Artist
+argument_list|>
+name|result1
+init|=
+name|context1
+operator|.
+name|performQuery
+argument_list|(
+name|q
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|result1
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Mutate the returned list. This should not change the cache.
+name|result1
+operator|.
+name|add
+argument_list|(
+name|context1
+operator|.
+name|newObject
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|Artist
+argument_list|>
+name|result2
+init|=
+name|context1
+operator|.
+name|performQuery
+argument_list|(
+name|q
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"the list stored in the shared query cache cannot be mutated after being returned"
+argument_list|,
+literal|1
+argument_list|,
+name|result2
+operator|.
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
